# grpc-rest-benchmark

./: .gitignore  CLAUDE.md  LEARNINGS.md  Makefile  PLAN.md  README.md  RESULTS.md  docker-compose.yml  go.mod  go.sum  timing_test.json
.claude/: settings.local.json
clients/python/: database.py  generate_proto.sh  grpc_client.py  requirements.txt  resources.py  sdk_client.py
clients/rust/: Cargo.toml
clients/rust/proto/: benchmark.proto
clients/rust/src/: main.rs
cmd/benchmark/: client.go  main.go  reporter.go  reporter_test.go  resources.go  runner.go  timing.go  timing_test.go
cmd/grpc-server/: main.go
cmd/rest-server/: main.go
docs/: blog-post.md
migrations/: 001_init.sql  002_add_client_column.sql  003_add_resource_columns.sql  004_add_duration_to_stats.sql
pkg/db/: accounts.go  accounts_test.go  benchmark.go  benchmark_test.go  db.go  db_test.go  transactions.go  transactions_test.go
pkg/protos/: benchmark.pb.go  benchmark.proto  benchmark_grpc.pb.go
scripts/: fetch_hcs_timing.py  seed_data.sql
web/: dashboard.js  embed.go  index.html  style.css
