[package]
name = "benchmark_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for REST
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PostgreSQL with connection pooling
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }

# System monitoring
sysinfo = "0.31"

# Time and duration
chrono = "0.4"

# Random
rand = "0.8"

# Async utilities
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"
